[gd_scene load_steps=8 format=3 uid="uid://c1bprsqxaal1n"]

[ext_resource type="Script" uid="uid://cwo8dem74no3b" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Script" uid="uid://bpp6bk56ub4n7" path="res://camera.gd" id="2_sweqy"]
[ext_resource type="PackedScene" uid="uid://f3wnwammu15g" path="res://eye_ball.tscn" id="4_sweqy"]
[ext_resource type="Texture2D" uid="uid://idual0ubmy2l" path="res://gun.png" id="5_2hs0m"]
[ext_resource type="Texture2D" uid="uid://cp4tcoo0sy2sj" path="res://eye_arm.png" id="6_1jxqw"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ig7tw"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ig7tw"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_onrkg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_ig7tw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_ig7tw")

[node name="head" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.528334, 0)
script = ExtResource("2_sweqy")

[node name="hand" type="Sprite3D" parent="head/Camera3D"]
transform = Transform3D(0.0536312, 0, -0.0722751, 0, 0.09, 0, 0.0722751, 0, 0.0536312, 0.216069, -0.120264, -0.38604)
texture_filter = 2
texture = ExtResource("5_2hs0m")

[node name="Marker3D" type="Marker3D" parent="head/Camera3D/hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.28031, 1.101, -8.68511)

[node name="eye_ball_hand" type="Sprite3D" parent="head/Camera3D"]
transform = Transform3D(0.0622044, 0, 0.0650432, 0.00843243, 0.0892405, -0.0080644, -0.0644942, 0.0116679, 0.0616794, -0.257982, -0.136092, -0.450099)
texture_filter = 0
texture = ExtResource("6_1jxqw")

[node name="eye_ball2" parent="head/Camera3D" instance=ExtResource("4_sweqy")]
transform = Transform3D(-0.0509115, -0.00512678, -0.0313326, -0.00113774, 0.0594691, -0.00788188, 0.0317289, -0.00609387, -0.0505583, -0.19186, -0.0550629, -0.36198)

[node name="DashCountdown" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="DashCountdown" to="." method="_on_dash_countdown_timeout"]
